#Adjusts and setting docker compose

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -11,11 +11,7 @@
    "entities": [
       "src/entities/*.ts"
    ],
-   "migrations": [
-      "src/migrations/*.ts"
-   ],
    "cli": {
-      "entitiesDir": "src/entities",
-      "migrationsDir": "src/migrations"
+      "entitiesDir": "src/entities"
    }
 }
